--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "private": true,
   "scripts": {
-    "start": "servor"
+    "start": "servor",
+    "lint": "csslint --config=csslint.json ."
   },
   "devDependencies": {
+    "csslint": "^1.0.5",
     "servor": "^4.0.2"
   }
 }
