--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,8 +21,6 @@ jobs:
         # cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
-    #- run: npm run build:feed
-    #- run: npm run build:template
-    - run: npm test
+    #- run: npm test
 
 # End.
