--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,6 +20,7 @@ jobs:
         check-latest: true
         # cache: 'npm'
     - run: npm ci
+    - run: npm run lint
     - run: npm run build --if-present
     #- run: npm test
 
