--- a/dialog/position/package.json
+++ b/dialog/position/package.json
@@ -7,7 +7,10 @@
   "exports": {
     ".": "./index.js",
     "./style": "./index.css",
-    "./css": "./index.css"
+    "./css": "./index.css",
+    "./scss": "./src/index.scss",
+    "./scss/mixin": "./src/positionMixin.scss",
+    "./scss/functions": "./src/squareBrackets.scss"
   },
   "repository": {
     "type": "git",
