task: Add sass to `package.json` (#3)

--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "private": true,
   "scripts": {
+    "build": "sass ./dialog/position/src/index.scss _temp.css",
+    "sass:h": "sass --help",
+    "sass:v": "sass --version",
     "start": "servor",
     "lint": "csslint --config=csslint.json . && semistandard"
   },
   "devDependencies": {
     "csslint": "^1.0.5",
+    "sass": "^1.86.3",
     "semistandard": "^17.0.0",
     "servor": "^4.0.2"
   }
